// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary passes through if non-error 1`] = `
<div
  className="hero-page "
>
  <div
    className="hero-page__icon"
  >
    <svg
      className="mdi-icon "
      fill="currentColor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M13,13H11V7H13M13,17H11V15H13M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2Z"
      />
    </svg>
  </div>
  <div
    className="hero-page__title"
  >
    Error
  </div>
  <div
    className="hero-page__subtitle"
  >
    <div
      className="container"
    >
      <p>
        Sourcegraph encountered an unexpected error. If reloading the page doesn't fix it, contact your site admin or Sourcegraph support.
      </p>
      <p>
        <code>
          x
        </code>
      </p>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary renders error page if error 1`] = `
<span>
  hello
</span>
`;

exports[`ErrorBoundary renders reload page if chunk error 1`] = `
<div
  className="hero-page "
>
  <div
    className="hero-page__icon"
  >
    <svg
      className="mdi-icon "
      fill="currentColor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M19,12H22.32L17.37,16.95L12.42,12H16.97C17,10.46 16.42,8.93 15.24,7.75C12.9,5.41 9.1,5.41 6.76,7.75C4.42,10.09 4.42,13.9 6.76,16.24C8.6,18.08 11.36,18.47 13.58,17.41L15.05,18.88C12,20.69 8,20.29 5.34,17.65C2.22,14.53 2.23,9.47 5.35,6.35C8.5,3.22 13.53,3.21 16.66,6.34C18.22,7.9 19,9.95 19,12Z"
      />
    </svg>
  </div>
  <div
    className="hero-page__title"
  >
    Reload required
  </div>
  <div
    className="hero-page__subtitle"
  >
    <div
      className="container"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
      >
        Reload to update
      </button>
    </div>
  </div>
</div>
`;
